# cmake-template

./: .gitignore  CMakeLists.txt  Makefile  README.md
scripts/: build.bat  configure_linux_debug.sh  configure_linux_release.sh  configure_windows_debug.bat  configure_windows_release.bat
src/: main.c  main.cpp
src/web/: index.html
tools/: linux-toolchain.cmake  wasm-toolchain.cmake  windows-toolchain.cmake
web/: default.css  index.html
